--- a/Develop/index.html
+++ b/Develop/index.html
@@ -33,7 +33,7 @@
     <!-- Adding main semantics -->
     <main class="content">
         <!-- adding alt attributes for WCAG compliance -->
-        <div class="search-engine-optimization">
+        <div id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Search engine optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
